--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <TextureView
-        android:id="@+id/video_surface_left"
-        android:layout_width="960px"
+        android:id="@+id/video_surface"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left" />
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"/>
 
-    <TextureView
-        android:id="@+id/video_surface_right"
-        android:layout_width="960px"
-        android:layout_height="match_parent"
-        android:layout_gravity="right" />
-</LinearLayout>
+    <TextView
+        android:id="@+id/text_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        ></TextView>
 
-<!--<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
-android:layout_alignParentBottom="true"
-android:id="@+id/linearLayout">
-<Button
-    android:id="@+id/btn_takeOff"
-    android:layout_width="0dp"
-    android:layout_weight="1"
-    android:layout_gravity="center_vertical"
-    android:layout_height="wrap_content"
-    android:text="Take Off"
-    android:textSize="12sp"/>
+</RelativeLayout>
 
-<Button
-    android:id="@+id/btn_autoLand"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:text="Auto Land"
-    android:layout_weight="1"
-    android:layout_gravity="center_vertical" />
-
-</LinearLayout>-->
