加入第一页 about-us.html

--- a/h5/public/stylesheets/style.css
+++ b/h5/public/stylesheets/style.css
@@ -1,8 +1,48 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  min-height: 100%;
+  position: absolute;
+  background: #FAFAFA;
+  box-sizing: border-box;
 }
 
-a {
-  color: #00B7FF;
+a, article, aside, blockquote, body, button, code, dd, details, div, dl, dt, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, input, legend, li, menu, nav, ol, p, pre, section, td, textarea, th, ul {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  outline: 0;
+  font-family: "微软雅黑",'Microsoft Yahei','Hiragino Sans GB',tahoma,arial,"宋体";
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+}
+
+.active-title {
+  font-size: 1.6rem;
+  text-align: center;
+  margin-top: 1.3rem;
+}
+
+.active-container {
+  width: auto;
+  border: 1px solid #e6e6e6;
+  box-sizing: border-box;
+  padding: 1.3rem .65rem;
+  margin: 1.3rem 1.3rem 3.1rem;
+  background: #fff;
+}
+
+.active-container .text-indent {
+  text-indent: 2em;
+}
+
+.active-container p .tl {
+  font-size: .8rem;
+  display: table-cell;
+  vertical-align: top;
+  min-width: 4.3rem;
+}
+
+.active-container p .tr {
+  font-size: .8rem;
+  display: table-cell;
 }
