--- a/h5/views/index.jade
+++ b/h5/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+block head
+    title 空间穿越
+
+block body
+    h1= title
+    p Welcome to #{title}
