--- a/h5/views/layout.jade
+++ b/h5/views/layout.jade
@@ -1,7 +1,22 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    head
+        meta( http-equiv = "content-type" , content = "text/html;charset=utf-8" )
+        meta( name="viewport" , content="width=device-width, initial-scale=1, user-scalable=1" )
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        script.
+            (function () {
+                var standard = Math.ceil(( window.screen.width - window.innerWidth > 0 ? window.innerWidth : window.screen.width ) / 750 * 32) + "px";
+                document.getElementsByTagName("html")[0].style.fontSize = standard;
+            })();
+
+        block head
+
+    body
+        block body
+
+    script.
+        (function () {
+            var standard = Math.ceil(( window.screen.width - window.innerWidth > 0 ? window.innerWidth : window.screen.width ) / 750 * 32) + "px";
+            document.body.style.fontSize = standard;
+        })();
