注册并集成友盟

--- a/h5/views/layout.jade
+++ b/h5/views/layout.jade
@@ -15,6 +15,7 @@ html
     body
         block body
 
+    script(src="//s11.cnzz.com/z_stat.php?id=1260477861&web_id=1260477861",async="async",defer="defer")
     script.
         (function () {
             var standard = Math.ceil(( window.screen.width - window.innerWidth > 0 ? window.innerWidth : window.screen.width ) / 750 * 32) + "px";
