--- a/h5/views/about-us.jade
+++ b/h5/views/about-us.jade
@@ -6,8 +6,8 @@ block head
 block body
     .active-title 公司介绍
     .active-container
-        p.text-indent 星群信息科技有限公司于2015年12月在上海成立，以“无人机+VR+共享经济”为理念，通过无人机，基于虚拟现实、云计算、无人机和流媒体技术，构建场景体验分享服务开放平台，为用户提供身临其境的在美丽风景中飞行探索的绝妙体验。
-        p.text-indent 公司致力于为企业和无人机场景分享者提供一站式的服务支撑，让无人机场景分享更加简单、便捷，激活这样一个庞大的新兴产业。
+        p.text-indent 上海星群信息科技有限公司 2015年12月成立，以“无人机+VR+共享经济”为理念，基于虚拟现实、云计算、无人机和流媒体技术，通过无人机构建场景体验分享服务开放平台，为客户提供在世界各地身临其境的飞行体验。
+        p.text-indent 公司致力于为企业和分享者提供一站式的服务支撑，让场景分享更加简单、安全，激活“场景体验分享”这个新兴产业。
 
     .active-title 联系我们
     .active-container
