--- a/h5/views/index.jade
+++ b/h5/views/index.jade
@@ -1,8 +1,44 @@
 extends layout
 
 block head
-    title 空间穿越
+    title 准备穿越
 
 block body
-    h1= title
-    p Welcome to #{title}
+    //.active-title 准备穿越
+    div(id="container", style="width:500px; height:300px")
+
+    script(src="http://webapi.amap.com/maps?v=1.3&key=1eb5c8044bf3a789d2876ae58d03ab18&callback=init")
+    script.
+        function showPosition(position){
+            console.log("showPosition");
+            var latitude = position.coords.latitude;
+            var longitude = position.coords.longitude;
+            console.log(latitude + ", " + longitude);
+
+        }
+    script.
+        function displayError(error){
+            console.log(error.code);
+        }
+    script.
+        function init(){
+            console.log("init");
+
+            var container = document.getElementById("container");
+            var width = window.screen.width - window.innerWidth > 0 ? window.innerWidth : window.screen.width;
+            container.style.width = width + "px";
+
+            var map = new AMap.Map('container', {
+                center: [121.48, 31.05], // 上海
+                zoom: 6
+            });
+            map.plugin(["AMap.ToolBar"], function() {
+                map.addControl(new AMap.ToolBar());
+            });
+
+            if (navigator.geolocation){
+                navigator.geolocation.getCurrentPosition(showPosition, displayError, null);
+            }
+        }
+
+
