--- a/h5/views/index.jade
+++ b/h5/views/index.jade
@@ -9,16 +9,23 @@ block body
 
     script(src="http://webapi.amap.com/maps?v=1.3&key=1eb5c8044bf3a789d2876ae58d03ab18&callback=init")
     script.
-        function showPosition(position){
-            console.log("showPosition");
-            var latitude = position.coords.latitude;
-            var longitude = position.coords.longitude;
-            console.log(latitude + ", " + longitude);
+        function onSuccess(position){
+            console.log("onSuccess");
 
+            var latitude = position.coords.latitude; //纬度
+            var longitude = position.coords.longitude; //经度
+            var altitude = position.coords.altitude; //海拔
+            var accuracy = position.coords.accuracy; //精确度
+            console.log(latitude + ", " + longitude + ", " + altitude + ", " + accuracy);
+            alert(latitude + ", " + longitude + ", " + altitude + ", " + accuracy)
         }
     script.
-        function displayError(error){
+        function onError(error){
+            console.log("onError");
+
             console.log(error.code);
+            console.log(error.message);
+            alert(error.message)
         }
     script.
         function init(){
@@ -39,7 +46,9 @@ block body
             });
 
             if (navigator.geolocation){
-                navigator.geolocation.getCurrentPosition(showPosition, displayError, null);
+                // timeout at 1000 milliseconds (1 seconds)
+                var options = {timeout:1000};
+                navigator.geolocation.getCurrentPosition(onSuccess, onError, options);
             }
         }
 
