--- a/h5/views/index.jade
+++ b/h5/views/index.jade
@@ -21,9 +21,14 @@ block body
 
             var map = new AMap.Map('container', {
                 resizeEnable: true,
-                zoom:11,
+                zoom:12,
                 center: [longitude, latitude]
             });
+
+            var marker = new AMap.Marker({
+                position: [116.480983, 39.989628]
+            });
+            marker.setMap(map);
         }
     script.
         function onError(error){
