--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,27 @@
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearLayout">
+
+        <ToggleButton
+            android:id="@+id/btn_record"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Start Record"
+            android:textOff="Start Record"
+            android:textOn="Stop Record"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:textSize="12dp"
+            android:checked="false" />
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/text_info"
         android:layout_width="wrap_content"
