1.手机的姿态（pitch，roll，yaw）映射到头的姿态；2.手柄控制无人机：上升下降；3.手柄控制无人机：前进后退；4.头部控制无人机转身 －Yaw ；5.头部控制无人机平移 －Roll；6.头部陀螺仪误差较大，忽略小变动使平滑减少抖动。

--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:id="@+id/linearLayout">
 
         <ToggleButton
@@ -29,7 +29,6 @@
             android:textSize="12dp"
             android:checked="false" />
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/text_info"
