--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,14 @@
             android:layout_gravity="center_vertical"
             android:textSize="12dp"
             android:checked="false" />
+
+        <Button
+            android:id="@+id/btn_record_video_mode"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Record Video Mode"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical" />
     </LinearLayout>
 
     <TextView
