--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,34 @@
         android:id="@+id/linearLayout">
 
         <ToggleButton
+            android:id="@+id/btn_control"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Enable Control"
+            android:textOff="Enable Control"
+            android:textOn="Disable Control"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:textSize="12dp"
+            android:checked="false" />
+
+        <Button
+            android:id="@+id/btn_take_off"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Take Off"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/btn_auto_landing"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Auto Landing"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical" />
+
+        <ToggleButton
             android:id="@+id/btn_record"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -29,13 +57,13 @@
             android:textSize="12dp"
             android:checked="false" />
 
-        <Button
+<!--        <Button
             android:id="@+id/btn_record_video_mode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Record Video Mode"
             android:layout_weight="1"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical" />-->
     </LinearLayout>
 
     <TextView
