给联系方式页面加公众号

--- a/h5/public/stylesheets/style.css
+++ b/h5/public/stylesheets/style.css
@@ -52,3 +52,9 @@ a, article, aside, blockquote, body, button, code, dd, details, div, dl, dt, fie
   font-size: 1rem;
   display: table-cell;
 }
+
+.webchat-code img {
+  width: 50%;
+  display: block; 
+  margin: 0 auto;
+}
