--- a/h5/views/about-us.jade
+++ b/h5/views/about-us.jade
@@ -1,16 +1,25 @@
 extends layout
 
 block head
-    title 走进星群
+    title 关于我们
 
 block body
     .active-title 公司介绍
     .active-container
-        p.text-indent 上海星群信息科技有限公司 2015年12月成立，以“无人机+VR+共享经济”为理念，基于虚拟现实、云计算、无人机和流媒体技术，通过无人机构建场景体验分享服务开放平台，为客户提供在世界各地身临其境的飞行体验。
-        p.text-indent 公司致力于为企业和分享者提供一站式的服务支撑，让场景分享更加简单、安全，激活“场景体验分享”这个新兴产业。
+        p.text-indent 上海星群信息科技有限公司于2015年底月成立，致力于将无人机与虚拟现实、云服务技术连接起来，实现远程景点第一人称视角的飞行体验。
 
     .active-title 联系我们
     .active-container
         p
             span.tl 公司邮箱：
-            span.tr foamliu@yeah.com
+            span.tr foamliu@yeah.net
+        p
+            span.tl 公司地址：
+            span.tr 上海市闵行区浦驰路1809弄104号701室
+        p
+            span.tl 邮政编码：
+            span.tr 200237
+
+    .active-title 星群科技微信公众号
+    .webchat-code
+        img(src="/images/webchat-code.jpg")
