--- a/h5/views/index.jade
+++ b/h5/views/index.jade
@@ -5,3 +5,5 @@ block head
 
 block body
     .active-title 产品介绍
+    .active-container
+        p.text-indent 通过互联网，基于共享经济的理念，把旅游资源（场景）通过无人机和虚拟现实技术逼真的呈现在用户面前。用户可以在上海家中客厅的沙发上，享受在科罗拉多大峡谷上空第一人称视角的飞行体验。
