--- a/h5/views/test-location.jade
+++ b/h5/views/test-location.jade
@@ -4,7 +4,7 @@ block head
     title 地图试验
 
 block body
-    .active-title 地图试验
+    //.active-title 地图试验
     div(id="container", style="width:500px; height:300px")
 
     script(src="http://webapi.amap.com/maps?v=1.3&key=1eb5c8044bf3a789d2876ae58d03ab18&callback=init")
