--- a/h5/views/test-attitude.jade
+++ b/h5/views/test-attitude.jade
@@ -23,11 +23,11 @@ block body
         span(id="y") 0
     p z轴加快度：
         span(id="z") 0
-    p x轴加快度(推敲重力加快度)：
+    p x轴加快度(含重力加快度)：
         span(id="xg") 0
-    p y轴加快度(推敲重力加快度)：
+    p y轴加快度(含重力加快度)：
         span(id="yg") 0
-    p z轴加快度(推敲重力加快度)：
+    p z轴加快度(含重力加快度)：
         span(id="zg") 0
     p 阁下扭转速度：
         span(id="Ralpha") 0
@@ -40,39 +40,39 @@ block body
 
 
     script.
-        (
-            function orientationHandler(event) {
-                document.getElementById("alpha").innerHTML = event.alpha;
-                document.getElementById("beta").innerHTML = event.beta;
-                document.getElementById("gamma").innerHTML = event.gamma;
-                document.getElementById("heading").innerHTML = event.webkitCompassHeading;
-                document.getElementById("accuracy").innerHTML = event.webkitCompassAccuracy;
-            }
-            function motionHandler(event) {
-                document.getElementById("interval").innerHTML = event.interval;
-                var acc = event.acceleration;
-                document.getElementById("x").innerHTML = acc.x;
-                document.getElementById("y").innerHTML = acc.y;
-                document.getElementById("z").innerHTML = acc.z;
-                var accGravity = event.accelerationIncludingGravity;
-                document.getElementById("xg").innerHTML = accGravity.x;
-                document.getElementById("yg").innerHTML = accGravity.y;
-                document.getElementById("zg").innerHTML = accGravity.z;
-                var rotationRate = event.rotationRate;
-                document.getElementById("Ralpha").innerHTML = rotationRate.alpha;
-                document.getElementById("Rbeta").innerHTML = rotationRate.beta;
-                document.getElementById("Rgamma").innerHTML = rotationRate.gamma;
-            }
+        
+        function orientationHandler(event) {
+            document.getElementById("alpha").innerHTML = event.alpha;
+            document.getElementById("beta").innerHTML = event.beta;
+            document.getElementById("gamma").innerHTML = event.gamma;
+            document.getElementById("heading").innerHTML = event.webkitCompassHeading;
+            document.getElementById("accuracy").innerHTML = event.webkitCompassAccuracy;
+        }
+        function motionHandler(event) {
+            document.getElementById("interval").innerHTML = event.interval;
+            var acc = event.acceleration;
+            document.getElementById("x").innerHTML = acc.x;
+            document.getElementById("y").innerHTML = acc.y;
+            document.getElementById("z").innerHTML = acc.z;
+            var accGravity = event.accelerationIncludingGravity;
+            document.getElementById("xg").innerHTML = accGravity.x;
+            document.getElementById("yg").innerHTML = accGravity.y;
+            document.getElementById("zg").innerHTML = accGravity.z;
+            var rotationRate = event.rotationRate;
+            document.getElementById("Ralpha").innerHTML = rotationRate.alpha;
+            document.getElementById("Rbeta").innerHTML = rotationRate.beta;
+            document.getElementById("Rgamma").innerHTML = rotationRate.gamma;
+        }
 
-            if (window.DeviceMotionEvent) {
-                window.addEventListener("devicemotion", motionHandler, false);
-            } else {
-                document.body.innerHTML ="What user agent u r using？？？";
-            }
-            if (window.DeviceOrientationEvent) {
-                window.addEventListener("deviceorientation", orientationHandler, false);
-            } else {
-                document.body.innerHTML ="What user agent u r using？？？";
-            };
-        )();
+        if (window.DeviceMotionEvent) {
+            window.addEventListener("devicemotion", motionHandler, false);
+        } else {
+            document.body.innerHTML ="What user agent u r using？？？";
+        }
+        if (window.DeviceOrientationEvent) {
+            window.addEventListener("deviceorientation", orientationHandler, false);
+        } else {
+            document.body.innerHTML ="What user agent u r using？？？";
+        }
+        
 
