--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,22 @@
             android:textSize="12dp"
             android:checked="false" />
 
+<!--        <TextView
+            android:id="@+id/txt_battery"
+            android:layout_width="10sp"
+            android:layout_height="wrap_content"
+            android:text="100%"
+            android:textSize="12dp"
+            />
+
+        <TextView
+            android:id="@+id/txt_time"
+            android:layout_width="10sp"
+            android:layout_height="wrap_content"
+            android:text="00:00"
+            android:textSize="12dp"
+            />-->
+
 <!--        <Button
             android:id="@+id/btn_record_video_mode"
             android:layout_width="0dp"
