--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,19 @@
     android:orientation="horizontal">
 
     <TextureView
-        android:id="@+id/video_surface"
+        android:id="@+id/texture_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:alpha="50"/>
+
+    <SurfaceView
+        android:id="@+id/surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,33 +73,34 @@
             android:textSize="12dp"
             android:checked="false" />
 
-        <ToggleButton
-            android:id="@+id/btn_safe_mode"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Normal Mode"
-            android:textOff="Normal Mode"
-            android:textOn="Safe Mode"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textSize="12dp"
-            android:checked="false" />
+        <!--<ToggleButton-->
+            <!--android:id="@+id/btn_safe_mode"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Normal Mode"-->
+            <!--android:textOff="Normal Mode"-->
+            <!--android:textOn="Safe Mode"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:textSize="12dp"-->
+            <!--android:checked="false" />-->
 
-<!--        <TextView
-            android:id="@+id/txt_battery"
-            android:layout_width="10sp"
-            android:layout_height="wrap_content"
-            android:text="100%"
-            android:textSize="12dp"
-            />
+        <!--<TextView-->
+            <!--android:id="@+id/text_battery"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="100%"-->
+            <!--android:textSize="12dp"-->
+            <!--/>-->
 
-        <TextView
-            android:id="@+id/txt_time"
-            android:layout_width="10sp"
-            android:layout_height="wrap_content"
-            android:text="00:00"
-            android:textSize="12dp"
-            />-->
+        <!--
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_width="10sp"
+                    android:layout_height="wrap_content"
+                    android:text="00:00"
+                    android:textSize="12dp"
+                    />-->
 
 <!--        <Button
             android:id="@+id/btn_record_video_mode"
