--- a/XiaoDaiRobot/app/src/main/res/layout/activity_main.xml
+++ b/XiaoDaiRobot/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cc.stargroup.xiaodai.MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:id="@+id/linearLayout">
+
+    <Button
+        android:id="@+id/btn_take_off"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="报天气"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
