加入语音识别能力

--- a/XiaoDaiRobot/app/src/main/res/layout/activity_main.xml
+++ b/XiaoDaiRobot/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,14 @@
             android:layout_weight="1"
             android:text="报天气" />
 
+        <Button
+            android:id="@+id/btn_recognize"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="语音识别" />
+
     </LinearLayout>
 
 </RelativeLayout>
